--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <header>
     <div class="header-wrap">
       <h1><%= link_to 'Address Book App', root_path %></h1>
-      <%= link_to 'Find me on github', 'https://github.com//', target: 'blank', class: 'find_me' %>
+      <%= link_to 'Find me on github', 'https://github.com/w-butler-n/AddressBook', target: 'blank', class: 'find_me' %>
     </div>
   </header>
 
@@ -19,7 +19,7 @@
   </div>
 
   <footer>
-  	<p>Made by Wissam SAMEUT</p>
+  	<p>Made by Wissam SAMEUT - 2016</p>
   </footer>
   <%= javascript_include_tag "application" %>
 </body>
